deploy/hu009_promote/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>BranchCode__c</fullName>
        <label>Sucursal</label>
        <type>Picklist</type>
        <description>HU-009 (pilot: Costa Rica): canonical sales branch of the in-person activity (C101 network per QRM registry). API value = canonical code, matching the public group GRP_Sucursal_[code] - the sharing flow contract. Advisor PICKS the branch; for Test Drive the mirror flow sets it from the ServiceTerritory. New branch/country = new value here + new public group (governance gate).</description>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
        <value><fullName>CR_URUCA</fullName><default>false</default><label>Uruca (CR)</label></value>
        <value><fullName>CR_LIBERIA</fullName><default>false</default><label>Liberia (CR)</label></value>
        <value><fullName>CR_SANCARLOS</fullName><default>false</default><label>San Carlos (CR)</label></value>
        <value><fullName>CR_LINDORA</fullName><default>false</default><label>Lindora (CR)</label></value>
        <value><fullName>CR_AYARCO</fullName><default>false</default><label>Ayarco (CR)</label></value>
        <value><fullName>CR_SANTAANA</fullName><default>false</default><label>Santa Ana (CR)</label></value>
        <value><fullName>CR_GUAPILES</fullName><default>false</default><label>Guápiles (CR)</label></value>
        <value><fullName>CR_PEREZZELEDON</fullName><default>false</default><label>Pérez Zeledón (CR)</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitStatus__c</fullName>
        <label>Estado de la Visita</label>
        <type>Picklist</type>
        <description>HU-009 (all countries): operational state of the visit (Event-only activities; Test Drive is governed by the Scheduler Appointment).</description>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value><fullName>Pendiente</fullName><default>true</default><label>Pendiente</label></value>
                <value><fullName>Atendida</fullName><default>false</default><label>Atendida</label></value>
                <value><fullName>No Show</fullName><default>false</default><label>No Show</label></value>
                <value><fullName>Cancelada</fullName><default>false</default><label>Cancelada</label></value>
                <value><fullName>Reprogramada</fullName><default>false</default><label>Reprogramada</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ServiceAppointmentId__c</fullName>
        <label>ServiceAppointment Id (espejo TD)</label>
        <length>18</length>
        <type>Text</type>
        <externalId>true</externalId>
        <description>HU-009 (all countries): Id of the ServiceAppointment that originated the mirror Event of a Test Drive. Match key of the one-way sync flow (prevents duplicates on reschedules).</description>
    </fields>
</CustomObject>